--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/khyan22/food-festival#readme",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.4.0",
     "file-loader": "^6.2.0",
+    "image-webpack-loader": "^6.0.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
